Fri Jun  8 19:23:45 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * tao/Generic_Sequence_T.h:

          A default-constructed unbounded sequence has no buffer allocated, so
          "release" should be false.  This restores the behavior of sequences
          before the recent re-write.

        * tests/Sequence_Unit_Tests/bounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/bounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/string_sequence_tester.hpp:
        * tests/Sequence_Unit_Tests/unbounded_fwd_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_object_reference_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_octet_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_string_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/unbounded_value_sequence_ut.cpp:
        * tests/Sequence_Unit_Tests/value_sequence_tester.hpp:

          Updated unit tests to take this into account.

Fri Jun 08 10:20:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * TAO/orbsvcs/orbsvcs/SSLIOP/params_dup.c:

          Due to Window's MFC compatiable builds objecting to this
          c file, it has been renamed to .cpp and extern "C" statements
          included with the two functions that require C linkage.

Wed Jun 06 16:07:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * TAO_IDL/ast/ast_type.cpp:

          Remove an assert (that can get treiggered legaly during
          idl compilation when errors have been seen, and we are
          only checking code further down).

Wed Jun  6 12:05:22 UTC 2007  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/Event/Mcast/AddrServer/Client.cpp:

          Fixed old reference to RtecUDPAdmin::INET that was overlooked
          yesterday.
Wed Jun 06 09:39:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * TAO_IDL/util/utl_scope.cpp:

          Corrects an issue with the wrong error message being